knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/ScoreCardMatrix__c/ScoreCardMatrix__c.object-meta.xml
<CustomObject>
    <label>ScoreCardMatrix</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>ScoreCardMatrix Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ScoreCardMatrixs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>