knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/ScoreCardMatrix__c/fields/Criteria_Fields__c.field-meta.xml
<CustomField>
    <fullName>Criteria_Fields__c</fullName>
    <label>Criteria Fields</label>
    <length>255</length>
    <type>Text</type>
</CustomField>