knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/ScoreCardMatrix__c/fields/LeadScoreCardbyAccount__c.field-meta.xml
<CustomField>
    <fullName>LeadScoreCardbyAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LeadScoreCardbyAccount</label>
    <referenceTo>LeadScoreCardbyAccount__c</referenceTo>
    <relationshipLabel>ScoreCardMatrixs</relationshipLabel>
    <relationshipName>ScoreCardMatrixs</relationshipName>
    <type>Lookup</type>
</CustomField>