knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/ScoreCardMatrix__c/fields/LegacyID__c.field-meta.xml
<CustomField>
    <fullName>LegacyID__c</fullName>
    <externalId>true</externalId>
    <label>LegacyID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>