knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/ScoreCardMatrix__c/fields/WEIGHTED_CONSTANTS_C__c.field-meta.xml
<CustomField>
    <fullName>WEIGHTED_CONSTANTS_C__c</fullName>
    <label>WEIGHTED_CONSTANTS__C</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>